--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ __   _____ _ __ ___(_) ___  _ __   |___ / / |___ /
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \ | | |_ \
  \ V /  __/ |  \__ \ | (_) | | | |  ___) || |___) |
   \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_|____/
+                Apr 27 2016
 
 The Half Release, a.k.a. the Zealous Easter Trim.
 
