--- a/doc/manpage/smpirun.1
+++ b/doc/manpage/smpirun.1
@@ -37,7 +37,7 @@ Display the machine on which each process rank is mapped.
 Use that amount of processes. By default, there is the same number of processes as there are of hosts in the hostfile.
 .TP
 \fB\-trace\fR
-Equivalent to \fB–cfg\fR=\fItracing\fR:\fIyes\fR \fB–cfg\fR=\fItracing/smpi\fR:\fIyes\fR, activate the trace mecanism if available.
+Equivalent to \fB–cfg\fR=\fItracing\fR:\fIyes\fR \fB–cfg\fR=\fItracing/smpi\fR:\fIyes\fR, activate the trace mechanism if available.
 .TP
 \fB\-trace-ti\fR
 Activate time independant tracing.
