[CHANGELOG] Added recent SMPI fixes

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@ SimGrid (3.14) UNRELEASED; urgency=low
    your trace files and slow down or speed up the simulation between two 
    consecutive calls by using an adjustment file. (See the documentation.)
 
+ * Fixed computation of timings for MPI_Send, MPI_Recv but possibly also others
+   We've found a bug that prevented SMPI to account for MPI_Send, MPI_Recv
+   and others (in some cases) in a correct way. That is, the smpi/os, smpi/or
+   values were ignored in some cases. The timings of these functions can now
+   be significantly different.
 
  -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
