--- a/TODO
+++ b/TODO
@@ -25,6 +25,6 @@
 
 * Replace XBT with the C++ standard library
 
-* Some XBT datacontainers seem to overlap. Kill some of them all.
+* Some XBT datacontainers seem to overlap. Kill some/all of them.
     - replace fifo with dynars
     - replace set with SWAG
