remove two functions manipulating msg_mailbox_t

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,11 @@ SimGrid (3.14) UNRELEASED; urgency=low
    values were ignored in some cases. The timings of these functions can now
    be significantly different.
 
+ MSG
+ * Remove the functions manipulating mailboxes. Use s4u::Mailbox instead
+   - MSG_mailbox_is_empty() -> Mailbox::empty()
+   - MSG_mailbox_get_by_alias -> simgrid::s4u::Mailbox::byName(name)
+
  -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
 SimGrid (3.13) stable; urgency=low
