--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@ SimGrid (3.14) UNRELEASED; urgency=low
    - MSG_mailbox_front() -> Mailbox::front()
    - MSG_mailbox_get_by_alias() -> simgrid::s4u::Mailbox::byName(name)
    - MSG_mailbox_get_task_ext() -> MSG_task_receive_ext()
+   - MSG_mailbox_get_task_ext_bounded -> MSG_task_receive_ext_bounded
 
  -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
