--- a/ChangeLog
+++ b/ChangeLog
@@ -13,7 +13,7 @@ SimGrid (3.14) UNRELEASED; urgency=low
    be significantly different.
 
  MSG
- * Remove the functions manipulating mailboxes. Use s4u::Mailbox instead
+ * msg_mailbox_t and associated functions. Use s4u::Mailbox instead.
    - MSG_mailbox_is_empty() -> Mailbox::empty()
    - MSG_mailbox_front() -> Mailbox::front()
    - MSG_mailbox_get_by_alias() -> simgrid::s4u::Mailbox::byName(name)
