--- a/ChangeLog
+++ b/ChangeLog
@@ -36,7 +36,7 @@ SimGrid (3.14) UNRELEASED; urgency=low
    They may become useful to some lucky ones.
    
  Java:
- * New function: msg.Comm.waitAll()
+ * New functions: msg.Comm.waitAll() and msg.Comm.waitAny()
  * ex/app_tokenring: new example, very similar to the MSG Token Ring
  * ex/async_waitAll: new example, on asynchronous communications
 
