--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,7 @@ SimGrid (3.14) UNRELEASED; urgency=low
    be significantly different.
 
  * smpi/cpu-threshold:-1 should become smpi/simulate-computation:no
+   smpi/running-power    is renamed to smpi/host-speed
 
  Dropped functions and features
  * msg_mailbox_t and associated functions. Use s4u::Mailbox instead.
