--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ SimGrid (3.14) UNRELEASED; urgency=low
 
  Documentation
  * The whole documentation was reworked and reorganized. There is
-   still many room for improvement here, but we're on it.
+   still much room for improvement here, but we're on it.
 
  Infrastructure
  * We now need python3 for our testing infrastructure.
