--- a/ChangeLog
+++ b/ChangeLog
@@ -25,13 +25,15 @@ SimGrid (3.14) UNRELEASED; urgency=low
  * smpi/cpu-threshold:-1 should become smpi/simulate-computation:no
    smpi/running-power    is renamed to smpi/host-speed
 
- Dropped functions and features
+ Dropped / renamed functions and features
  * msg_mailbox_t and associated functions. Use s4u::Mailbox instead.
    - MSG_mailbox_is_empty() -> Mailbox::empty()
    - MSG_mailbox_front() -> Mailbox::front()
    - MSG_mailbox_get_by_alias() -> simgrid::s4u::Mailbox::byName(name)
    - MSG_mailbox_get_task_ext() -> MSG_task_receive_ext()
    - MSG_mailbox_get_task_ext_bounded -> MSG_task_receive_ext_bounded
+   - MSG_host_(get/set)_params -> MSG_vm_(get/set)_params
+
  * Task affinity. Its intended behavior (that was very badly tested
    and probably not really working) was deceiving what most users
    would have hoped here.
