Completely rework the properties of netzones
- This changes some MSG functions, but I doubt that any users really
  used them. Even if someone did, there is no real loss of
  functionnality. The only missing thing would be if someone wants to
  traverse the whole set, but I don't have no good idea here since the
  data is stored in a C++ container. It's hard to let C code traverse
  it. I could add a _dump() method to just display it.
- the change in the tesh file denotes an old bug that this change
  fixes. The name property was not defined in the cluster tag, but in
  the previous one in the XML, so it should not have landed in the
  properties of the cluster's hosts.
- the code in the XML to stack the dictionnaries for each AS is simply
  gone. The AS is created in the STag function, so simply retrieve it
  by name and use it when we need it. No need for an additional storage.
- surf_routing is almost gone, now \o/

--- a/ChangeLog
+++ b/ChangeLog
@@ -42,6 +42,10 @@ SimGrid (3.14) UNRELEASED; urgency=low
    - MSG_storage_set_property_value()
  * VM properties. Since msg_vm_t are msg_host_t, just use
    MSG_host_get_property_value() and friends
+ * MSG_as_router_get_property_value() was redundent with
+   MSG_environment_as_get_property_value(). 
+   - Removed MSG_as_router_*propert*() functions
+   - Added MSG_environment_as_set_property_value() for consistency
  * xbt heterogeneous dictionnaries (created with xbt_dict_new()). 
    Well, they are still there for now, but deprecated with a warning. 
    Please switch to xbt_dict_new_homogeneous() before this is removed
