--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,7 @@ The Chrismas Pi Release.
 
  * S4U interface further rising, toward SimGrid 4
    - Routing code rewritten for readability
-   - Virtual Machines almost changed into a plugin
+   - Virtual Machines almost turned into a plugin
    - MSG, SimDag, MPI interfaces mostly unchanged
                     _               _____  _ _____
 __   _____ _ __ ___(_) ___  _ __   |___ / / |___ /
