--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ __   _____ _ __ ___(_) ___  _ __   |___ / / | || |
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \ | | || |_
  \ V /  __/ |  \__ \ | (_) | | | |  ___) || |__   _|
   \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_|  |_|
+               Dec 24 2016
 
 The Chrismas Pi Release.
 
